[gd_scene format=3 uid="uid://mw6efu3gwcng"]

[ext_resource type="Script" uid="uid://em5qrhkrw22v" path="res://scripts/shop/shop_screen.gd" id="1_38ec2"]

[node name="ShopScreen" type="Control" unique_id=202934722]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_38ec2")

[node name="Background" type="ColorRect" parent="." unique_id=1966390223]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.101960786, 0.101960786, 0.0627451, 1)

[node name="TitleLabel" type="Label" parent="." unique_id=279124691]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -33.0
offset_top = 20.0
offset_right = 33.0
offset_bottom = 43.0
grow_horizontal = 2
text = "üõí SHOP"

[node name="GoldLabel" type="Label" parent="." unique_id=1459705477]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -74.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 43.0
grow_horizontal = 0
text = "Gold: 0"
horizontal_alignment = 2

[node name="MainContainer" type="HBoxContainer" parent="." unique_id=2125190226]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 60.0
offset_right = -20.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="LeftPanel" type="VBoxContainer" parent="MainContainer" unique_id=732379010]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15

[node name="UnitsHeader" type="Label" parent="MainContainer/LeftPanel" unique_id=601807326]
layout_mode = 2
text = "UNITS FOR SALE"
horizontal_alignment = 1

[node name="UnitsList" type="ItemList" parent="MainContainer/LeftPanel" unique_id=1750552285]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2

[node name="ServicesHeader" type="Label" parent="MainContainer/LeftPanel" unique_id=1154362726]
layout_mode = 2
text = "SERVICES"
horizontal_alignment = 1

[node name="HealAllButton" type="Button" parent="MainContainer/LeftPanel" unique_id=87991141]
layout_mode = 2
text = "Heal All Wounded - 100g"

[node name="RightPanel" type="VBoxContainer" parent="MainContainer" unique_id=560095809]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15

[node name="ItemsHeader" type="Label" parent="MainContainer/RightPanel" unique_id=1970448400]
layout_mode = 2
text = "ITEMS FOR SALE"
horizontal_alignment = 1

[node name="ItemsList" type="ItemList" parent="MainContainer/RightPanel" unique_id=1705930855]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2

[node name="WoundedHeader" type="Label" parent="MainContainer/RightPanel" unique_id=136200228]
layout_mode = 2
text = "WOUNDED UNITS"
horizontal_alignment = 1

[node name="WoundedList" type="ItemList" parent="MainContainer/RightPanel" unique_id=1198417613]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="." unique_id=1310496580]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -60.0
offset_right = 20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 20

[node name="BuyUnitButton" type="Button" parent="ButtonContainer" unique_id=791096851]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "BUY UNIT"

[node name="BuyItemButton" type="Button" parent="ButtonContainer" unique_id=1412791869]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "BUY ITEM"

[node name="HealUnitButton" type="Button" parent="ButtonContainer" unique_id=1016048827]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "HEAL UNIT"

[node name="LeaveButton" type="Button" parent="ButtonContainer" unique_id=1999684337]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
text = "‚Üê LEAVE SHOP"
